disclaimer candidature + WIP W3C validator

--- a/candidatures/My-Boss-Is-Rich.html
+++ b/candidatures/My-Boss-Is-Rich.html
@@ -84,6 +84,9 @@
             </section>
 
         </div>
+
+
+        <p class="disclaimer">Cette page a été créé dans le seul but de candidater chez vous et sera supprimée à la fin du processus ou si elle pose problème.</p>
        
 
 
@@ -91,7 +94,7 @@
 
 
 
-        <script type="text/javascript">
+        <script>
 
             var bonjourPathes = document.querySelectorAll('.bonjourSvg path');
 
