--- a/candidatures/bonjour.html
+++ b/candidatures/bonjour.html
@@ -93,7 +93,7 @@
 
 
 
-        <script type="text/javascript">
+        <script>
 
             var bonjourPathes = document.querySelectorAll('.bonjourSvg path');
 
