--- a/cv.html
+++ b/cv.html
@@ -10,10 +10,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
 
         <!-- Styles -->
-        <link rel="stylesheet" type="text/css" href="../css/style.css" />
-        <link rel="stylesheet" type="text/css" href="../css/styleMediaQueries.css" />
-        <link rel="stylesheet" type="text/css" href="../css/styleMediaQueries2k.css" />
-        <link rel="stylesheet" type="text/css" href="../css/style4k.css" />
+        <link rel="stylesheet" type="text/css" href="../css/style.css">
+        <link rel="stylesheet" type="text/css" href="../css/styleMediaQueries.css">
+        <link rel="stylesheet" type="text/css" href="../css/styleMediaQueries2k.css">
+        <link rel="stylesheet" type="text/css" href="../css/style4k.css">
 
         <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
@@ -22,8 +22,8 @@
         <link rel="manifest" href="../img/favicon/site.webmanifest">
 
         <!-- ScriptJS -->
-        <script type="text/javascript" src="../js/script.js"></script>
-        <script type="text/javascript" src="../js/scriptCv.js"></script>
+        <script src="../js/script.js"></script>
+        <script src="../js/scriptCv.js"></script>
 
         <!-- JQUERY -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
