--- a/mentionslegales.html
+++ b/mentionslegales.html
@@ -22,8 +22,8 @@
         <link rel="manifest" href="../img/favicon/site.webmanifest">
 
         <!-- ScriptJS -->
-        <script type="text/javascript" src="../js/script.js"></script>
-        <script type="text/javascript" src="../js/scriptCv.js"></script>
+        <script src="../js/script.js"></script>
+        <script src="../js/scriptCv.js"></script>
 
         <!-- JQUERY -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
