--- a/loisirs.html
+++ b/loisirs.html
@@ -11,10 +11,10 @@
 
         <!-- Styles -->
         <!-- <link rel="shortcut icon" href="{{ asset('img/photo.jpg') }}"> -->
-        <link rel="stylesheet" type="text/css" href="../css/style.css" />
-        <link rel="stylesheet" type="text/css" href="../css/styleMediaQueries.css" />
-        <link rel="stylesheet" type="text/css" href="../css/styleMediaQueries2k.css" />
-        <link rel="stylesheet" type="text/css" href="../css/style4k.css" />
+        <link rel="stylesheet" type="text/css" href="../css/style.css">
+        <link rel="stylesheet" type="text/css" href="../css/styleMediaQueries.css">
+        <link rel="stylesheet" type="text/css" href="../css/styleMediaQueries2k.css">
+        <link rel="stylesheet" type="text/css" href="../css/style4k.css">
 
         <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
@@ -23,8 +23,8 @@
         <link rel="manifest" href="../img/favicon/site.webmanifest">
 
         <!-- ScriptJS -->
-        <script type="text/javascript" src="../js/script.js"></script>
-        <script type="text/javascript" src="../js/galerie.js"></script>
+        <script src="../js/script.js"></script>
+        <script src="../js/galerie.js"></script>
 
 
         <!-- JQUERY -->
