--- a/projets.html
+++ b/projets.html
@@ -22,11 +22,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Kavoon&family=Righteous&display=swap" rel="stylesheet">
 
         <!-- Styles -->
-        <link rel="stylesheet" type="text/css" href="../css/style.css" />
-        <link rel="stylesheet" type="text/css" href="../css/styleMediaQueries.css" />
-        <link rel="stylesheet" type="text/css" href="../css/styleMediaQueries2k.css" />
-        <link rel="stylesheet" type="text/css" href="../css/style4k.css" />
-        <link rel="stylesheet" type="text/css" href="../css/style-phoneL.css" />
+        <link rel="stylesheet" type="text/css" href="../css/style.css">
+        <link rel="stylesheet" type="text/css" href="../css/styleMediaQueries.css">
+        <link rel="stylesheet" type="text/css" href="../css/styleMediaQueries2k.css">
+        <link rel="stylesheet" type="text/css" href="../css/style4k.css">
+        <link rel="stylesheet" type="text/css" href="../css/style-phoneL.css">
 
         <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
