--- a/candidatures/My-Boss-Is-Rich.html
+++ b/candidatures/My-Boss-Is-Rich.html
@@ -12,6 +12,7 @@
         <link rel="icon" type="image/x-icon" href=".\favicons\favicon.ico">
 
         <link rel="preload" as="image" href="https://bk-dev.fr/candidatures/youWantMe-min.png" />
+        <link rel="preload" as="image" href="https://bk-dev.fr/candidatures/youWantMeTxt-min.png" />
         <link rel="preload" as="font" type="font/woff2" href="https://bk-dev.fr/candidatures/GothamCond-Bold.ttf" crossorigin="anonymous" />
         <title>MY BOSS IS RICH &#x1F4B0;</title>
     </head>
@@ -19,8 +20,8 @@
     <body>
 
         <div>
-            <div class="testYeu1"></div>
-            <div class="testYeu2"></div>
+            <!-- <div class="testYeu1"></div>
+            <div class="testYeu2"></div> -->
             <!-- <img src="youWantMe-min.png" class="youWantMePng" /> -->
             <img src="youWantMeTxt-min.png" class="youWantMePng isMobile" />
             <img src="youWantMe-min.png" class="youWantMePng isDesktop" />
@@ -30,6 +31,10 @@
         <div class="content">
 
             <h1 class="youWantMeTxtDesktop isDesktop">YOU WANT ME</h1>
+
+            <!-- <span class="shiny isDesktop">
+                <span class="inner-shiny">YOU WANT ME</span>
+            </span> -->
 
 
             <section class="wrapper">
@@ -61,11 +66,11 @@
                     </span> et je suis à la recherche d'une opportunité pour une alternance "<strong>Concepteur Développeur d'Applications</strong>" chez Élan Formation à Strasbourg.
                     <br><br>
                     Parce que le développement d'applications est ma passion et que j'aime ajouter une touche de Fun à chaque ligne de code, je vous adresse ma candidature pour le poste en alternance au sein de votre entreprise créative et dynamique.
-                    <br>Je suis convaincu que l'apprentissage peut être à la fois enrichissant et amusant, et c'est précisément ce que je recherche chez Bonjour.fun. Mon parcours en développement, combiné à ma soif d'apprendre et mon esprit joueur, font de moi un candidat idéal pour contribuer à vos projets innovants.
+                    <br>Je suis convaincu que l'apprentissage peut être à la fois enrichissant et amusant, et c'est précisément ce que je recherche chez "My Client Is Rich". Mon parcours en développement combiné à ma soif d'apprendre, font de moi un candidat idéal pour contribuer à vos projets innovants.
                     <br><br>
                     Je possède de bonnes bases en <strong>Symfony</strong> et <strong>Javacript</strong>, et j'ai commencé un cours en <strong>React</strong>.
-                    <br><br>
-                    J'apprécie également beaucoup le <strong>front-end</strong>, le <strong>CSS</strong>, et le Responsiv Design.
+                    <br>
+                    J'apprécie également beaucoup le <strong>front-end</strong>, le <strong>CSS</strong>, le Responsiv Design, ainsi que les petites animations et détails qui rendent un site unique, personalisé, et attrayant.
                 </p>
 
                 <div class="socialsWrapper">
