--- a/candidatures/bonjour.html
+++ b/candidatures/bonjour.html
@@ -9,10 +9,18 @@
         <link rel="icon" type="image/x-icon" href="/img/bonjourFavicon2.jpg">
         <!-- Font Awesome -->
         <script src="https://kit.fontawesome.com/698848973e.js" crossorigin="anonymous"></script>
+
+        <link rel="preload" as="image" href="https://bk-dev.fr/candidatures/bonjour-min.jpg" />
         <title>Bonjour :)</title>
     </head>
 
     <body>
+
+
+        <img src="bonjour_forest-min.png" class="forestPng" />
+        <img src="bonjour-min.jpg" class="bonjourBackgroundImg" />
+        <img src="bonjour_mongollefiere.png" class="hotAirBallonImg" />
+        <img src="bonjour_plane.png" class="planeImg" />
 
         <section class="wrapper">
 
@@ -69,9 +77,11 @@
                 Parce que le développement d'applications est ma passion et que j'aime ajouter une touche de Fun à chaque ligne de code, je vous adresse ma candidature pour le poste en alternance au sein de votre entreprise créative et dynamique.
                 <br>Je suis convaincu que l'apprentissage peut être à la fois enrichissant et amusant, et c'est précisément ce que je recherche chez Bonjour.fun. Mon parcours en développement, combiné à ma soif d'apprendre et mon esprit joueur, font de moi un candidat idéal pour contribuer à vos projets innovants.
                 <br><br>
-                Je possède de bonnes bases en <strong>Symfony</strong> et <strong>Javacript</strong>, et j'ai commencé un cours en <strong>React</strong>.
+                Durant ma récente formation "développeur web et web mobile" chez Élan, j'ai pu découvrir et me former sur le <strong>framework Symfony</strong>. J'ai réaliser mon projet de fin de formation avec, et mon stage reposait sur une migration php vers Symfony.
+                Je possède également de bonnes bases en <strong>Javacript</strong>, et j'ai commencé un cours en <strong>React</strong>.
                 <br><br>
-                J'apprécie également beaucoup le <strong>front-end</strong>, le <strong>CSS</strong>, et le Responsiv Design.
+                J'apprécie beaucoup le <strong>front-end</strong>, le <strong>CSS</strong>, et le Responsiv Design, mais j'ai également beaucoup aimé travailler sur le <strong>backend</strong> avec Symfony.
+                
             </p>
 
             <a href="../index.html" class="portfolioLink"><i class="fa-solid fa-address-book" style="margin-right:5px;"></i> Visitez mon Porfolio</a>
@@ -87,6 +97,11 @@
 
         </section>
        
+
+        <p class="disclaimer">
+            Cette page a été créé dans le seul but de candidater chez vous et sera supprimée à la fin du processus ou si elle pose problème.
+            <br>Image by pngtree.com
+        </p>
 
 
         <!-- <span>test scrool X</span> -->
