--- a/candidatures/bonjour.html
+++ b/candidatures/bonjour.html
@@ -11,7 +11,7 @@
         <script src="https://kit.fontawesome.com/698848973e.js" crossorigin="anonymous"></script>
 
         <link rel="preload" as="image" href="https://bk-dev.fr/candidatures/bonjour-min.jpg" />
-        <title>Bonjour :)</title>
+        <title>Bonjour !</title>
     </head>
 
     <body>
@@ -77,11 +77,12 @@
                 Parce que le développement d'applications est ma passion et que j'aime ajouter une touche de Fun à chaque ligne de code, je vous adresse ma candidature pour le poste en alternance au sein de votre entreprise créative et dynamique.
                 <br>Je suis convaincu que l'apprentissage peut être à la fois enrichissant et amusant, et c'est précisément ce que je recherche chez Bonjour.fun. Mon parcours en développement, combiné à ma soif d'apprendre et mon esprit joueur, font de moi un candidat idéal pour contribuer à vos projets innovants.
                 <br><br>
-                Durant ma récente formation "développeur web et web mobile" chez Élan, j'ai pu découvrir et me former sur le <strong>framework Symfony</strong>. J'ai réaliser mon projet de fin de formation avec, et mon stage reposait sur une migration php vers Symfony.
+                Durant ma récente formation "développeur web et web mobile" chez Élan, j'ai pu découvrir et me former sur <strong>Symfony</strong>. J'ai réaliser mon projet de fin de formation avec ce framework, et mon stage reposait sur une migration php vers Symfony.
                 Je possède également de bonnes bases en <strong>Javacript</strong>, et j'ai commencé un cours en <strong>React</strong>.
                 <br><br>
                 J'apprécie beaucoup le <strong>front-end</strong>, le <strong>CSS</strong>, et le Responsiv Design, mais j'ai également beaucoup aimé travailler sur le <strong>backend</strong> avec Symfony.
-                
+                <br><br>
+                Au plaisir de travailler avec vous et de participer à l'évolution de votre projet !
             </p>
 
             <a href="../index.html" class="portfolioLink"><i class="fa-solid fa-address-book" style="margin-right:5px;"></i> Visitez mon Porfolio</a>
