--- a/candidatures/My-Boss-Is-Rich.html
+++ b/candidatures/My-Boss-Is-Rich.html
@@ -86,12 +86,14 @@
                     </div>
                 </div>
 
+                <p class="disclaimer isMobile">Cette page a été créé dans le seul but de candidater chez vous et sera supprimée à la fin du processus ou si elle pose problème.</p>
+
             </section>
 
         </div>
 
+        <p class="disclaimer isDesktop">Cette page a été créé dans le seul but de candidater chez vous et sera supprimée à la fin du processus ou si elle pose problème.</p>
 
-        <p class="disclaimer">Cette page a été créé dans le seul but de candidater chez vous et sera supprimée à la fin du processus ou si elle pose problème.</p>
        
 
 
