--- a/candidatures/bonjour.html
+++ b/candidatures/bonjour.html
@@ -7,20 +7,37 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="../css/styleCandidature.css" />
         <link rel="icon" type="image/x-icon" href="/img/bonjourFavicon2.jpg">
+
         <!-- Font Awesome -->
         <script src="https://kit.fontawesome.com/698848973e.js" crossorigin="anonymous"></script>
 
+        <!-- Preload imgs -->
         <link rel="preload" as="image" href="https://bk-dev.fr/candidatures/bonjour-min.jpg" />
+        <link rel="preload" as="image" href="https://bk-dev.fr/candidatures/bonjour_forest-min.png" />
+        <link rel="preload" as="image" href="https://bk-dev.fr/candidatures/bonjour_forest-min_mobile.png" />
+
         <title>Bonjour !</title>
     </head>
 
+
     <body>
 
+        <img src="bonjour_forest-min.png" class="forestPng isDesktop" />
+        <img src="bonjour_forest-min_mobile.png" class="forestPng isMobile" />
 
-        <img src="bonjour_forest-min.png" class="forestPng" />
         <img src="bonjour-min.jpg" class="bonjourBackgroundImg" />
-        <img src="bonjour_mongollefiere.png" class="hotAirBallonImg" />
-        <img src="bonjour_plane.png" class="planeImg" />
+
+        <img src="bonjour_mongollefiere3.png" class="hotAirBallonImg" />
+
+        <!-- Pollution bouhhh pas bien: -->
+        <!-- <img src="bonjour_plane.png" class="planeImg" /> -->
+
+
+        <!-- lecteur oiseaux.mp3 -->
+        <!-- <figure>
+            <audio controls src="oiseaux2.mp3"></audio>
+        </figure> -->
+
 
         <section class="wrapper">
 
@@ -44,7 +61,7 @@
 
             <span class="bonjourTxt">onjour</span>
 
-            <span class="extensionFunTitle">.fun</span>
+            <!-- <span class="extensionFunTitle">.fun</span> -->
 
         </section>
 
@@ -52,7 +69,11 @@
 
         <section class="sectionPresentation">
 
-            <p class="presentationParagraph">
+            <p id="presentationParagraph" class="presentationParagraph">
+
+                <!-- Btn hide -->
+                <span id="hideBtn" class="hideBtn"><i class="fa-regular fa-rectangle-xmark"></i></span>
+
                 <span style="margin-left: 25px;">Je</span> m'appelle 
                 <span class="wrapperName">
                     <svg class="basileSvgContainer isMobile">
@@ -72,7 +93,7 @@
                         </g>
                     </svg>
                     asile Kuntz
-                </span> et je suis à la recherche d'une opportunité pour une alternance "<strong>Concepteur Développeur d'Applications</strong>" chez Élan Formation à Strasbourg.
+                </span> et je suis à la recherche d'une opportunité pour une alternance "<strong class="frstStrong">Concepteur Développeur d'Applications</strong>" chez Élan Formation à Strasbourg.
                 <br><br>
                 Parce que le développement d'applications est ma passion et que j'aime ajouter une touche de Fun à chaque ligne de code, je vous adresse ma candidature pour le poste en alternance au sein de votre entreprise créative et dynamique.
                 <br>Je suis convaincu que l'apprentissage peut être à la fois enrichissant et amusant, et c'est précisément ce que je recherche chez Bonjour.fun. Mon parcours en développement, combiné à ma soif d'apprendre et mon esprit joueur, font de moi un candidat idéal pour contribuer à vos projets innovants.
@@ -82,7 +103,8 @@
                 <br><br>
                 J'apprécie beaucoup le <strong>front-end</strong>, le <strong>CSS</strong>, et le Responsiv Design, mais j'ai également beaucoup aimé travailler sur le <strong>backend</strong> avec Symfony.
                 <br><br>
-                Au plaisir de travailler avec vous et de participer à l'évolution de votre projet !
+                Au plaisir de travailler avec vous et de participer à l'évolution de votre <span style="text-wrap: nowrap;">projet !</span>
+
             </p>
 
             <a href="../index.html" class="portfolioLink"><i class="fa-solid fa-address-book" style="margin-right:5px;"></i> Visitez mon Porfolio</a>
@@ -102,29 +124,33 @@
         <p class="disclaimer">
             Cette page a été créé dans le seul but de candidater chez vous et sera supprimée à la fin du processus ou si elle pose problème.
             <br>Image by pngtree.com
+            <!-- <br>Sound Effect from <a href="https://pixabay.com/?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=6881">Pixabay</a> -->
         </p>
 
 
-        <!-- <span>test scrool X</span> -->
 
-
-
+        
         <script>
 
+            // <!-- Script dessin SVG logo -->
             var bonjourPathes = document.querySelectorAll('.bonjourSvg path');
 
             bonjourPathes.forEach(element => {
-
                 var lengthRec = element.getTotalLength();
                 element.style.transition = element.style.WebkitTransition = 'none';
                 element.style.strokeDasharray = lengthRec + ' ' + lengthRec;
                 element.style.strokeDashoffset = lengthRec;
                 element.getBoundingClientRect();
                 element.style.transition = element.style.WebkitTransition =
-                'stroke-dashoffset 2.2s 0.5s ease';
+                'stroke-dashoffset 2.2s 1.2s ease';
                 element.style.strokeDashoffset = '0';   
-
             });
+
+
+            // Hide Presentation Btn
+            document.getElementById('hideBtn').addEventListener('click', function() {
+                document.getElementById('presentationParagraph').style.opacity = '0';
+            })
 
         </script>
 
