disable temp data-theme="dark" html

--- a/cv.html
+++ b/cv.html
@@ -46,7 +46,7 @@
 
 
 
-    <body data-theme="dark">
+    <body>
 
 
         <!-- Fixed menu Burger (mobile) lors scroll -->
@@ -145,7 +145,7 @@
 
             <!-- Toggle light-theme (scriptAccueil.js) -->
             <div class="containerToggleLight isMobile">
-                <i id="currentThemeIcon" class="currentThemeIcon fa-solid fa-moon" data-theme="dark"></i>
+                <i id="currentThemeIcon" class="currentThemeIcon fa-solid fa-moon" ></i>
                 <label class="switch">
                     <input type="checkbox" id="themeToggle" disabled="true">
                     <span class="slider"></span>
