--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
 
-    <body id="body" data-theme="dark">
+    <body id="body" >
 
 
 
@@ -56,7 +56,7 @@
 
 
         <!-- WIP menu-burger mobile -->
-        <div id="mySidenav" class="sidenav isMobile" data-theme="dark">
+        <div id="mySidenav" class="sidenav isMobile" >
 
             <img src="../img/projects/bgShapes1_bjj.png" class="menuBurgerShape" alt="menu burger button" />
 
@@ -71,19 +71,19 @@
                 </li>
                 <li>
                     <a id="cvMenu" class="menuButton burgerMenuButtonWithImg" href="cv.html" style="position:relative; right:3px;">
-                        <img src="..\img\navBurgerImg\nav_cv_red.png" id="navBurger_cvIcon" class="navBurger_cvIcon" style="opacity:0.9;" alt="menu burger CV link" data-theme="dark" />
+                        <img src="..\img\navBurgerImg\nav_cv_red.png" id="navBurger_cvIcon" class="navBurger_cvIcon" style="opacity:0.9;" alt="menu burger CV link"  />
                         <span>Mon CV</span>
                     </a>
                 </li>
                 <li>
                     <a id="projetsMenu" class="menuButton burgerMenuButtonWithImg" href="projets.html">
-                        <img src="..\img\navBurgerImg\nav_projets_red.png" id="navBurger_projectsIcon" class="navBurger_projectsIcon" style="opacity:0.9;" alt="menu burger projects link" data-theme="dark" />
+                        <img src="..\img\navBurgerImg\nav_projets_red.png" id="navBurger_projectsIcon" class="navBurger_projectsIcon" style="opacity:0.9;" alt="menu burger projects link"  />
                         <span>Projets</span>
                     </a>
                 </li>
                 <li>
                     <a id="contactMenu" class="menuButton burgerMenuButtonWithImg" href="loisirs.html">
-                        <img src="..\img\navBurgerImg\nav_loisirs_red.png" id="navBurger_loisirsIcon" class="navBurger_loisirsIcon" style="opacity:0.9;" alt="menu burger hobbys link" data-theme="dark" />
+                        <img src="..\img\navBurgerImg\nav_loisirs_red.png" id="navBurger_loisirsIcon" class="navBurger_loisirsIcon" style="opacity:0.9;" alt="menu burger hobbys link"  />
                         <span>Loisirs</span>
                     </a>
                 </li>
@@ -103,7 +103,7 @@
 
             <!-- Toggle light-theme (scriptAccueil.js) -->
             <div class="containerToggleLight isMobile">
-                <i id="currentThemeIcon" class="currentThemeIcon fa-solid fa-moon" data-theme="dark"></i>
+                <i id="currentThemeIcon" class="currentThemeIcon fa-solid fa-moon" ></i>
                 <label class="switch">
                     <input type="checkbox" id="themeToggle" disabled="true">
                     <span class="slider"></span>
@@ -167,7 +167,7 @@
  
 
             <!-- Header -->
-            <header id="headerAccueil" class="darkedHeader" style="position:relative;" data-theme="dark">
+            <header id="headerAccueil" class="darkedHeader" style="position:relative;" >
 
                 <div id="pageTitleDiv" style="width:100%;">
                     <h1 id="titleH1" class="testH1" style="padding-top:2px;">
@@ -204,7 +204,7 @@
 
                 <!-- NavBarre -->
                 <div id="NavBarContainer" class="navBarContainerMobile isDesktop">
-                    <p id="menuLigneCv" data-theme="dark">
+                    <p id="menuLigneCv" >
                         <a id="accueilMenu" class="menuButton selected" href="index.html">Accueil</a> 
                         <!-- &nbsp;  -->
                         <a id="cvMenu" class="menuButton" href="cv.html">Mon CV</a> 
@@ -226,9 +226,9 @@
 
                 <div style="position:relative">
                         <a class="gitHubLink" target="_blank" href="https://github.com/baku67">
-                            <img src="../img/githubLogo2.png" id="githubBtnImg" class="githubLogo" data-theme="dark">
+                            <img src="../img/githubLogo2.png" id="githubBtnImg" class="githubLogo" >
                         </a>
-                    <h2 id="pageTitle" class="pageTitle pageTitleAccueil" data-theme="dark">Bienvenue sur mon <br class="isMobile">portfolio</h2>
+                    <h2 id="pageTitle" class="pageTitle pageTitleAccueil" >Bienvenue sur mon <br class="isMobile">portfolio</h2>
                 </div>
 
                 </br>
@@ -240,17 +240,17 @@
                     <img src="../img/projects/mobile/shapeAccueil-min_mobile.png" class="shapePresentation isMobile" />
 
                     <div class="fixScalePortraitPC isDesktop" style="position:relative;">
-                        <div id="portraitAccueil" class="imgAccueil" style="z-index:999;" data-theme="dark">
+                        <div id="portraitAccueil" class="imgAccueil" style="z-index:999;" >
                             <img src="..\img\portraits\portrait_bw.png" class="testPopPortraitImg" />
                         </div>
                     </div>
 
-                    <p id="paragrapheAccueil" class="paragrapheAccueil" data-theme="dark"> 
+                    <p id="paragrapheAccueil" class="paragrapheAccueil" > 
                         <!-- background Shape (DESKTOP) -->
                         <img src="../img/projects/shapeAccueil-min.png" class="shapePresentation isDesktop" />
 
                         <!-- <img src="" alt="test" class="isMobile" /> -->
-                        <!-- <div id="portraitAccueil" class="imgAccueil isMobile" style="z-index:999;" data-theme="dark"> -->
+                        <!-- <div id="portraitAccueil" class="imgAccueil isMobile" style="z-index:999;" > -->
                             <img src="..\img\portraits\portrait_bw.png" class="portraitMobile testPopPortraitImg isMobile" />
                         <!-- </div> -->
 
@@ -361,7 +361,7 @@
                     <div id="citationAndLightBulbWrapper">
                         
                         <!-- LightBulb Ampoule SVG (https://jakearchibald.com/2013/animated-line-drawing-svg/) -->
-                        <div id="lightBulbWrapperDiv" class="lightBulbWrapperDiv" data-theme="dark">
+                        <div id="lightBulbWrapperDiv" class="lightBulbWrapperDiv" >
                             <svg class="lightBulbContainer">
                                 <path 
                                     id="lightBulbPath"
@@ -403,13 +403,13 @@
 
                         </div>
 
-                        <div id="inspirationContainer" data-theme="dark">
-                            <h3 id="inspirationTitle" data-theme="dark">Inspirations:</h3>
+                        <div id="inspirationContainer" >
+                            <h3 id="inspirationTitle" >Inspirations:</h3>
                             <div style="position:relative;">
                                 <img class="quote1" src="../img/quote1.png" />
                                 <!-- <a href="https://www.flaticon.com/free-icons/quotation-marks" title="quotation marks icons">Quotation marks icons created by Retinaicons - Flaticon</a> -->
                                 <quote style="position:relative;">
-                                    <span id="quoteContent" data-theme="dark">Digital design is like painting, except the paint never dries. 
+                                    <span id="quoteContent" >Digital design is like painting, except the paint never dries. 
                                         <span class="quoteAuthor">- Neville Brody</span>
                                     </span>
                                 </quote>
@@ -439,7 +439,7 @@
                         <div class="accueilVideoPcDiv1 isDesktop">
                             <div class="accueilVideoPcDiv isDesktop">
 
-                                <video autoplay controls muted loop id="accueilVideoDesktop" class="accueilVideoPcVideo isDesktop" data-theme="dark">
+                                <video autoplay controls muted loop id="accueilVideoDesktop" class="accueilVideoPcVideo isDesktop" >
                                     <source src="" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
@@ -452,7 +452,7 @@
                         </div>
 
                         <!-- Mobile Bouton (sans controls) video trimmed -->
-                        <video autoplay muted loop id="accueilVideoMobile" class="accueilVideo isMobile" data-theme="dark">
+                        <video autoplay muted loop id="accueilVideoMobile" class="accueilVideo isMobile" >
                             <source src="" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
@@ -471,7 +471,7 @@
                         <div class="accueilProjectsTrait"></div>
 
                         <!-- Mobile: icones keyboard+mouse Mobile -->
-                        <img src="../img/keyboard_blue.png" id="accueilKeyboardPng" class="accueilKeyboardPng isMobile" data-theme="dark">
+                        <img src="../img/keyboard_blue.png" id="accueilKeyboardPng" class="accueilKeyboardPng isMobile" >
 
                     </div>
 
