--- a/loisirs.html
+++ b/loisirs.html
@@ -47,7 +47,7 @@
 
 
 
-    <body id="bodyLoisir" class="bodyLoisir" style="position:relative;" data-theme="dark">
+    <body id="bodyLoisir" class="bodyLoisir" style="position:relative;">
 
 
 
@@ -154,7 +154,7 @@
 
                 <!-- Toggle light-theme (scriptAccueil.js) -->
                 <div class="containerToggleLight isMobile">
-                    <i id="currentThemeIcon" class="currentThemeIcon fa-solid fa-moon" data-theme="dark"></i>
+                    <i id="currentThemeIcon" class="currentThemeIcon fa-solid fa-moon"></i>
                     <label class="switch">
                         <input type="checkbox" id="themeToggle" disabled="true">
                         <span class="slider"></span>
