--- a/mentionslegales.html
+++ b/mentionslegales.html
@@ -46,7 +46,7 @@
 
 
 
-    <body data-theme="dark" style="color: white;">
+    <body  style="color: white;">
 
 
         <main id="pageContainer" class="pageContainerAccueil" style="margin:0% 0%;">
@@ -54,7 +54,7 @@
 
 
             <!-- Header -->
-            <header id="headerAccueil" style="position:relative;" data-theme="dark">
+            <header id="headerAccueil" style="position:relative;" >
 
                 <div id="pageTitleDiv" style="width:100%;">
                     <h1 id="titleH1" class="testH1" style="padding-top:2px;">
@@ -91,7 +91,7 @@
 
                 <!-- NavBarre -->
                 <div id="NavBarContainer" class="navBarContainerMobile isDesktop">
-                    <p id="menuLigneCv" data-theme="dark">
+                    <p id="menuLigneCv" >
                         <a id="accueilMenu" class="menuButton selected" href="index.html">Accueil</a> 
                         <!-- &nbsp;  -->
                         <a id="cvMenu" class="menuButton" href="cv.html">Mon CV</a> 
