--- a/projets.html
+++ b/projets.html
@@ -60,7 +60,7 @@
 
 
 
-    <body id="bodyContainerProjets" data-theme="dark">
+    <body id="bodyContainerProjets" >
 
 
         <!-- <script>
@@ -143,7 +143,7 @@
 
             <!-- Toggle light-theme (scriptAccueil.js) -->
             <div class="containerToggleLight isMobile">
-                <i id="currentThemeIcon" class="currentThemeIcon fa-solid fa-moon" data-theme="dark"></i>
+                <i id="currentThemeIcon" class="currentThemeIcon fa-solid fa-moon" ></i>
                 <label class="switch">
                     <input type="checkbox" id="themeToggle" disabled="true">
                     <span class="slider"></span>
