--- a/cv.html
+++ b/cv.html
@@ -395,7 +395,7 @@
                             </svg>
                         </p>
 
-                        <ul>
+                        <ul class="cvUnorderedList">
                             <li>Plongée sous-marine</li>
                             <div class="separateurListe2"></div>
                             <li class="cvLineHeightMobile">Photographie sous-marine <span class="cvGrisedText">("Coup de coeur de la rédaction", Divosea Août 2014)</span></li>
