WIP candidature Kry.

--- a/candidatures/krysalidesign.html
+++ b/candidatures/krysalidesign.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="../css/styleCandidature3.css" />
-        <!-- <link rel="icon" type="image/x-icon" href="/img/bonjourFavicon2.jpg"> -->
+        <link rel="icon" type="image/x-icon" href="../candidatures/krysali-favicon.png">
 
         <!-- Font Awesome -->
         <script src="https://kit.fontawesome.com/698848973e.js" crossorigin="anonymous"></script>
@@ -21,6 +21,8 @@
     <body>
 
         <img src="bonjour-min.jpg" class="bonjourBackgroundImg" />
+
+        <!-- <img src="../img/projects/bgShapes1_bjj.png" class="candidatureShapes" /> -->
 
 
         <section class="wrapper">
@@ -66,42 +68,27 @@
 
         <section class="sectionPresentation">
 
+            <!-- <img src="../img/projects/bgShapes1_bjj.png" class="candidatureShapes2" /> -->
+
+
             <p id="presentationParagraph" class="presentationParagraph">
 
                 <!-- Btn hide -->
-                <span id="hideBtn" class="hideBtn"><i class="fa-solid fa-minus"></i></i></span>
+                <!-- <span id="hideBtn" class="hideBtn"><i class="fa-solid fa-minus"></i></i></span> -->
 
                 <span style="margin-left: 25px;">Je</span> m'appelle 
                 <span class="wrapperName">
-                    <svg class="basileSvgContainer isMobile">
-                        <g class="basileSvg">
-                            <path 
-                                class="basileSvgPath"
-                                d="M 5.95 10.15 C 12.25 10.15 12.25 1.05 5.95 1.05 C 3.15 1.05 1.05 3.15 1.05 5.25 L 1.12 16.52 L 9.8 16.52 C 14.35 16.45 16.52 14.84 16.45 11.55 C 16.45 8.75 14.28 7 12.74 7"
-                            />
-                        </g>
-                    </svg>
-                    <svg class="basileSvgContainer isDesktop">
-                        <g class="basileSvg">
-                            <path 
-                                class="basileSvgPath"
-                                d="M 5.95 10.15 C 12.25 10.15 12.25 1.05 5.95 1.05 C 3.15 1.05 1.05 3.15 1.05 5.25 L 1.12 16.52 L 9.8 16.52 C 14.35 16.45 16.52 14.84 16.45 11.55 C 16.45 8.75 14.28 7 12.74 7"
-                            />
-                        </g>
-                    </svg>
-                    asile Kuntz
+                Basile Kuntz
                 </span> et je suis à la recherche d'une opportunité pour une alternance "<strong class="frstStrong">Concepteur Développeur d'Applications</strong>" chez Élan Formation à Strasbourg.
                 <br><br>
-                Parce que le développement d'applications est ma passion et que j'aime ajouter une touche de Fun à chaque ligne de code, je vous adresse ma candidature pour le poste en alternance au sein de votre entreprise créative et dynamique.
-                <br>Je suis convaincu que l'apprentissage peut être à la fois enrichissant et amusant, et c'est précisément ce que je recherche chez Krysalidesign. Mon parcours en développement, combiné à ma soif d'apprendre et mon esprit joueur, font de moi un candidat idéal pour contribuer à vos projets innovants.
+                Parce que le développement de sites web <strong>créatifs</strong> et <strong>uniques</strong> est ma passion et que j'aime explorer toutes les possibilités qu'offre le code, je vous adresse ma candidature pour le poste en alternance au sein de votre entreprise créative et dynamique.
+                <br>Je suis convaincu que l'apprentissage peut être à la fois enrichissant et amusant, et c'est précisément ce que je recherche chez Krysalidesign. Mon parcours en développement, combiné à ma <strong>soif d'apprendre</strong> et ma <strong>curiosité</strong>, font de moi un candidat idéal pour contribuer à vos projets innovants.
                 <br><br>
-                Durant ma récente formation "développeur web et web mobile" chez Élan, j'ai pu découvrir et me former sur <strong>Symfony</strong>. J'ai réaliser mon projet de fin de formation avec ce framework, et mon stage reposait sur une migration php vers Symfony.
-                Je possède également de bonnes bases en <strong>Javacript</strong>, et j'ai commencé un cours en <strong>React</strong>.
+                Durant ma récente formation "développeur web et web mobile" chez Élan, j'ai pu continuer à me former sur le front-end ainsi que le back-end, et j'ai pu découvrir l'importance de l'UX et de l'UI.
                 <br><br>
-                J'apprécie beaucoup le <strong>front-end</strong>, le <strong>CSS</strong>, et le Responsiv Design, mais j'ai également beaucoup aimé travailler sur le <strong>backend</strong> avec Symfony.
+                En parallèle de ma recherche d'alternance, je travaille actuellement sur un site vitrine d'artiste, en me focalisant au maximum sur la créativité des pages, le respect de l'univers de l'artiste, ainsi que les performances du site en général. Vous pouvez le consulter à l'adresse suivante: <a href="https://www.les100ciels.art" target="_blank">les100ciels.art <i class="fa-solid fa-square-up-right"></i></a>
                 <br><br>
-                Au plaisir de travailler avec vous et de participer à l'évolution de votre <span style="text-wrap: nowrap;">projet !</span>
-
+                Au plaisir de travailler avec vous et de participer à vos <span style="text-wrap: nowrap;">projets !</span>
             </p>
 
             <a href="../index.html" id="portfolioLink" class="portfolioLink">
