WIP ajout projet 4

--- a/projets.html
+++ b/projets.html
@@ -781,6 +781,168 @@
 
                         </swiper-slide>
 
+
+                        <swiper-slide>
+
+                            <div class="desktopSlideMargin">
+
+                            <!-- Shape absolute (bas-droite) (MOBILE: couleur jaune) -->
+                            <img src="../img/projects/mobile/bgShapes1_terrine-min_mobile_rotated.png" class="projectShapeBgAnim2 projectShapesDiv-bottom-right isMobile" />
+
+
+                            <div id="projectContainer4" class="projectContainer projet3PositionMobile">
+
+                                <div class="gridProjetHeaderContainer description3boxShadow">
+
+                                    <div id="iframe4" class="iframe">
+                                        <div class="boutonMockup"></div>
+                                        <div class="boutonMockup2"></div>
+                                        <div class="bouton3Container"><div class="boutonMockup3"></div></div>
+                                        <div class="boutonMockup4"></div>
+                                        <div class="boutonMockup5"></div>
+                                    
+                                        <iframe src="https://les100ciels.art" class="iframeElem"></iframe>
+
+                                        <p class="lienBJJ"><a target="_blank" href="https://les100ciels.art">Voir le site<img src="../img/redirectionOrange.png" class="redirectionPng"></a></p>
+                                    </div>
+
+                                    <div class="description">
+
+                                        <div class="projectDescriptionWrapper">
+
+                                            <!-- Shape absolute (haut gauche) Mobile -->
+                                            <img src="../img/projects/mobile/bgShapes1_terrine-min_mobile.png" class="projectShapeBgAnim1-mobile topLeftBgMobile projectShapesDiv-top-left isMobile" />
+
+
+                                            <div class="projectDescriptionHeader pdh3">
+
+                                                <h3 class="projetNbr">Projet 4</h3>
+
+                                                <div class="projectTitle projectTitleTerrine">
+
+                                                    <img src="../img/projects/les100ciels-min.png" class="projectSlideLogo projectSlideLogo4" />
+                                                    <p class="projetSlideTitle" style="">les100ciels</p>
+
+                                                </div>
+
+                                                <p class="projetDescriptionText">Site vitrine d'artiste</p> 
+
+                                            </div>
+
+                                            <ul class="projetSkillsList">
+                                                <li>HTML</li>
+                                                <li>CSS</li>
+                                                <li>JS</li>
+                                                <li class="mainSkill">PHP</li>
+                                            </ul>
+
+                                            <ul class="projetFuncList">
+                                                <li>Galleries</li>
+                                                <li>Animations CSS</li>
+                                                <li>Responsiv Design</li>
+                                                <li>Formulaire de contact</li>
+                                            </ul>
+
+                                        </div>
+
+                                        <div class="projectLinksDiv">
+                                            <a href="https://github.com/baku67" target="_blank" class="githubProjectLink linkGithub">
+                                                <i class="fa-brands fa-github githubLinkIcon"></i>
+                                                <span>Projet</span>
+                                            </a>
+
+                                            <a href="https://les100ciels.art" target="_blank" class="githubProjectLink linkWebsite" >
+                                                <i class="fa-solid fa-globe githubLinkIcon"></i>
+                                                <span>Site</span>
+                                            </a>
+                                        </div>
+
+                                        <div id="splideTerrine" class="splide" role="group" aria-label="Splide Basic HTML Example">
+
+                                        <div class="splide__slider">
+                                            <div class="splide__track">
+                                                <ul class="splide__list" style="list-style-type:none;">
+                                                    <li class="splide__slide" style="list-style-type:none;">
+                                                        <img src="..\img\demos\screenShots\compressed\terrine1-min.png" class="carouselImgProject isDesktop" />
+                                                        <img src="..\img\demos\screenShots\compressed\mobile\terrine1-min.png" class="carouselImgProject isMobile" />
+                                                    </li>
+                                                    <li class="splide__slide" style="list-style-type:none;">
+                                                        <img src="..\img\demos\screenShots\compressed\terrine2-min.png" class="carouselImgProject isDesktop" />
+                                                        <img src="..\img\demos\screenShots\compressed\mobile\terrine2-min.png" class="carouselImgProject isMobile" />
+                                                    </li>
+                                                    <li class="splide__slide" style="list-style-type:none;">
+                                                        <img src="..\img\demos\screenShots\compressed\terrine3-min.png" class="carouselImgProject isDesktop" />
+                                                        <img src="..\img\demos\screenShots\compressed\mobile\terrine3-min.png" class="carouselImgProject isMobile" />
+                                                    </li>
+                                                    <li class="splide__slide" style="list-style-type:none;">
+                                                        <img src="..\img\demos\screenShots\compressed\terrine4-min.png" class="carouselImgProject isDesktop" />
+                                                        <img src="..\img\demos\screenShots\compressed\mobile\terrine4-min.png" class="carouselImgProject isMobile" />
+                                                    </li>
+                                                    <li class="splide__slide" style="list-style-type:none;">
+                                                        <img src="..\img\demos\screenShots\compressed\terrine5-min.png" class="carouselImgProject isDesktop" />
+                                                        <img src="..\img\demos\screenShots\compressed\mobile\terrine5-min.png" class="carouselImgProject isMobile" />
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+
+                                        <div class="splide__progress">
+                                                <div class="splide__progress__bar">
+                                                </div>
+                                        </div>
+
+                                        <button class="splide__toggle" type="button">
+                                            <svg
+                                                class="splide__toggle__play"
+                                                viewBox="0 0 24 24"
+                                                xmlns="http://www.w3.org/2000/svg"
+                                            >
+                                                <path d="m22 12-20 11v-22l10 5.5z"/>
+                                            </svg>
+                                            <svg
+                                                class="splide__toggle__pause"
+                                                viewBox="0 0 24 24"
+                                                xmlns="http://www.w3.org/2000/svg"
+                                            >
+                                                <path d="m2 1v22h7v-22zm13 0v22h7v-22z"/>
+                                            </svg>
+                                        </button>
+
+                                        </div>
+
+                                        <script>
+                                        // Splide caroussel screenshots des projets
+                                        document.addEventListener( 'DOMContentLoaded', function() {
+                                            // var splide = new Splide( '.splide' );
+                                            // splide.mount();
+                                            var splide = new Splide( '#splideTerrine', {
+                                                autoplay: true,
+                                                type: 'loop',
+                                                pauseOnHover: false,
+                                                // pagination: false,
+                                                classes: {
+                                                    prev  : 'splide__arrow--prev',
+                                                    next  : 'splide__arrow--next',
+                                                },
+                                            }).mount();
+                                        } );
+                                        </script>
+
+
+                                    </div>
+
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </swiper-slide>
+
+
+
+
+
+
                         <script>
                             // Fix projet BJJ HS sur mobile (TODO: enlever les cookies sur SquadForge)
                             if (window.innerWidth <= 768) {
