--- a/cv.html
+++ b/cv.html
@@ -526,7 +526,7 @@
 
                         </p>
 
-                        <ul>
+                        <ul style="position:relative; z-index: 999999999;">
                             <li>Visual Studio</li>
                             <li>Git</li>
                             <li>Photoshop / pixlr.com</li>
